--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE HTML>
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,7 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
         <!--Javascript-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>xzsz
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src='js/script.js'></script>
         <script type="text/javascript" src='js/bootstrap.js'></script>
         <!--Fonts-->
