I'm going through changes

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 				<div class=' collapse navbar-collapse' id='navbar-collapse'>
 					<ul class='nav navbar-nav'>
                         <li><a href="#">Home</a></li>
-						<li><a href="#feedback">Feedback</a>
+						<li><a href="#feedback">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li>jfkslfjslkfs</li>
-                                        <li>jfkslfjslkfs</li>
-                                        <li>jfkslfjslkfs</li>
+                                        <li>History</li>
+                                        <li>Episode Transtripts</li>
+                                        <li>Cast and Crew</li>
                                         <li>jfkslfjslkfs</li>
                                     </ul>
                                 </div>
