I'm going through changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <!--Meta Tags-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="images/favicon.ico">
         <title>The Scary Monkey Show Invader Zim Information Site</title>
         <!--Stylesheets-->
         <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
@@ -39,24 +40,25 @@
                                         <li>History</li>
                                         <li>Episode Transtripts</li>
                                         <li>Cast and Crew</li>
-                                        <li>jfkslfjslkfs</li>
+                                        <li>Canceled Episodes</li>
+                                        <li>Easter Eggs</li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-						<li><a href="#gallery">Gallery</a>
+						<li><a href="#gallery">Lore</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li>jfkslfjslkfs</li>
-                                        <li>jfkslfjslkfs</li>
-                                        <li>jfkslfjslkfs</li>
-                                        <li>jfkslfjslkfs</li>
+                                        <li>Creatore Biology</li>
+                                        <li>Character Bios</li>
+                                        <li>Planet Guide</li>
+                                        <li>d</li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-						<li><a href="#features">Features</a></li>
+						<li><a href="#features">Zim Resources</a></li>
 						<li><a href="#faq">FAQ</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
