--- a/index.html
+++ b/index.html
@@ -51,20 +51,46 @@
                                 <div class="nav-sub">
                                     <ul>
                                         <li>Creatore Biology</li>
+                                        <li>Earth Locations</li>
                                         <li>Character Bios</li>
                                         <li>Planet Guide</li>
-                                        <li>d</li>
+                                        <li>Irken Guide</li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-						<li><a href="#features">Zim Resources</a></li>
+						<li><a href="#features">Zim Resources</a>
+                            <div class="nav-content">
+                                <div class="nav-sub">
+                                    <ul>
+                                        <li>Other Fan Sites</li>
+                                        <li>Forums</li>
+                                        <li>Social Media</li>
+                                        <li>Other</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
 						<li><a href="#faq">FAQ</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
 			</div><!--End Container-->
 		</nav><!--End Navbar-->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-8">
+                    jfkdlsfjsdklfsd
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <aside class="side_bar">
+                        fjdskfldkl
+                    </aside>
+                </div>
+            </div>
+
+        </div>
+        <footer>&copy Invader Zim is property of Nickelodeon. Site created by Matt Lee and co-created by Nicolas Noriega a.k.a. ThatMoose. </footer>
         </div>
     </body>
 </html>
