--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="container wrapper">
@@ -84,7 +85,7 @@
                         <h2>Site News</h2>
                         <hr>
                         <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                            <strong>December 28, 2015 - </strong>The site has been revamped. I was recreating The Scary Monkey Show site but it was just getting to be too much to handle by hand. I've revamped it in a much more managable coding format. So I should have it back up to where it was in no time. Then maybe I can get around to finishing. Also my buddy, Nicolas is going to be helping out in any way he can.
                         </p>
                     </div>
                     <div class="section">
