--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,41 @@
                     </aside>
                 </div><!--End Side Bar-->
             </div><!--End Row-->
-
+            <div class="section container"> <!--Other Links Section-->
+                <h2>Other Special Areas</h2>
+                <div class="col-lg-4">
+                    <ul>
+                        <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
         <footer>&copy Invader Zim is property of Nickelodeon. Site created by Matt Lee and co-created by Nicolas Noriega a.k.a. ThatMoose. </footer>
     </div>
 </body>
