--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="#">Creatore Biology</a></li>
+                                        <li><a href="#">Creature Biology</a></li>
                                         <li><a href="#">Earth Locations</a></li>
                                         <li><a href="#">Character Bios</a></li>
                                         <li><a href="#">Planet Guide</a></li>
@@ -89,6 +89,12 @@
                         <p>
                             <strong>Email:</strong> <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>
                         </p>
+                        <p>
+                            <strong>Skype:</strong> matthew_c_lee
+                        </p>
+                        <p>
+                            <strong>Facebook:</strong> <a href="https://www.facebook.com/mattboy115">https://www.facebook.com/mattboy115</a>
+                        </p>
                         <hr>
                         <h3>Nicolas <small>Admin</small></h3>
                     </div>
@@ -112,12 +118,12 @@
             </div><!--End Row-->
             <div class="section container"> <!--Other Links Section-->
                 <h2>Other Special Areas</h2>
-                <div class="col-lg-4">
+                <div class="other_areas col-lg-4">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">The Resisty Database</a></li>
+                        <li><a href="#">Skool Seating Charts</a></li>
+                        <li><a href="#">Screenshot Galleries</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
