--- a/show_info.html
+++ b/show_info.html
@@ -33,7 +33,7 @@
                 </div><!--End Navbar Header-->
                 <div class=' collapse navbar-collapse' id='navbar-collapse'>
                     <ul class='nav navbar-nav'>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="show_info.html">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
@@ -82,32 +82,23 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Updates</h2>
+                        <h2>Show Info</h2>
                         <hr>
-                        <p>
-                            <strong>December 28, 2015 - </strong>The site has been revamped. It may look prettymuch the same but I can assure you the structure is way different. I've revamped it in a much more managable coding format. So I should have it back up to where it was in no time. Then maybe I can get around to finishing it. Also my buddy, Nicolas is going to be helping out in any way he can.
-                        </p>
-                        <p>
-                            I am going to make the contact page first so that I or Nicolas can be contacted about content to add. I have all the original files from The Scary Monkey Show from 2007 but if you think you have something new to add, please let me know! In fact, here's my email: <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>!
-                        </p>
-                    </div>
-                    <div class="section">
-                        <h2>Zim News</h2>
-                        <hr>
-                        <p>
-                            In case you haven't heard, Invader Zim has made a comeback! No, not the show we remember. But it's the next best thing! Jhonen Vasquez has begun work on a comic book series so that we at least have <strong>SOME</strong> new Zim to look forward to.
-                        </p>
-                        <p>
-                            The comic series has been going for a little while now. Issue #6 should be out pretty soon!
-                        </p>
-                        <a target="_blank" class="text_link" href="http://getcomics.info/?s=invader+zim">You can get the first 5 for free right now at getcomics.info!</a>
-                        <div class="image_container">
-                            <img src="images/book_cover.jpg" alt="cover" />
+                        <div class="col-lg-6">
+                            <a href="show_info/history.html"><img class="info_buttons" src="images/show_info/history.png" alt="history"/></a>
                         </div>
-                        <p>
-                            Now here's something really interesting. If you don't like reading, you should check out Soapy Waffles! They're trying to recreate the episode of Zim that we were cheated out of by Nickelodeon.
-                        </p>
-                        <a class="text_link" href="http://soapywaffles.wix.com/soapywaffles">Check out the awesome right here!</a>
+                        <div class="col-lg-6">
+                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                        </div>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
