--- a/show_info/history.html
+++ b/show_info/history.html
@@ -4,15 +4,15 @@
     <!--Meta Tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <title>The Scary Monkey Show Invader Zim Information Site</title>
     <!--Stylesheets-->
-    <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
     <!--Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src='js/script.js'></script>
-    <script type="text/javascript" src='js/bootstrap.js'></script>
+    <script type="text/javascript" src='../js/script.js'></script>
+    <script type="text/javascript" src='../js/bootstrap.js'></script>
     <!--Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container wrapper">
-        <img class="site_banner" src="images/index/site_banner.png">
+        <img class="site_banner" src="../images/index/site_banner.png">
         <nav class='navbar navbar-inverse'>
             <div class='container'>
                 <div class='navbar-header'>
@@ -33,12 +33,12 @@
                 </div><!--End Navbar Header-->
                 <div class=' collapse navbar-collapse' id='navbar-collapse'>
                     <ul class='nav navbar-nav'>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="show_info.html">Show Info</a>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../show_info.html">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="show_info/history.html">History</a></li>
+                                        <li><a href="../show_info/history.html">History</a></li>
                                         <li><a href="#">Episode Transtripts</a></li>
                                         <li><a href="#">Cast and Crew</a></li>
                                         <li><a href="#">Canceled Episodes</a></li>
@@ -82,32 +82,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Updates</h2>
-                        <hr>
-                        <p>
-                            <strong>December 28, 2015 - </strong>The site has been revamped. It may look prettymuch the same but I can assure you the structure is way different. I've revamped it in a much more managable coding format. So I should have it back up to where it was in no time. Then maybe I can get around to finishing it. Also my buddy, Nicolas is going to be helping out in any way he can.
-                        </p>
-                        <p>
-                            I am going to make the contact page first so that I or Nicolas can be contacted about content to add. I have all the original files from The Scary Monkey Show from 2007 but if you think you have something new to add, please let me know! In fact, here's my email: <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>!
-                        </p>
-                    </div>
-                    <div class="section">
-                        <h2>Zim News</h2>
-                        <hr>
-                        <p>
-                            In case you haven't heard, Invader Zim has made a comeback! No, not the show we remember. But it's the next best thing! Jhonen Vasquez has begun work on a comic book series so that we at least have <strong>SOME</strong> new Zim to look forward to.
-                        </p>
-                        <p>
-                            The comic series has been going for a little while now. Issue #6 should be out pretty soon!
-                        </p>
-                        <a target="_blank" class="text_link" href="http://getcomics.info/?s=invader+zim">You can get the first 5 for free right now at getcomics.info!</a>
-                        <div class="image_container">
-                            <img src="images/book_cover.jpg" alt="cover" />
-                        </div>
-                        <p>
-                            Now here's something really interesting. If you don't like reading, you should check out Soapy Waffles! They're trying to recreate the episode of Zim that we were cheated out of by Nickelodeon.
-                        </p>
-                        <a class="text_link" href="http://soapywaffles.wix.com/soapywaffles">Check out the awesome right here!</a>
+
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
@@ -123,7 +98,7 @@
                                 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                             </form>
-                            <img id="minimoose" width="270" src="images/donations.png">
+                            <img id="minimoose" width="270" src="../images/donations.png">
                         </section>
                     </div>
                     </aside>
