--- a/show_info.html
+++ b/show_info.html
@@ -84,19 +84,19 @@
                     <div class="section">
                         <h2>Show Info</h2>
                         <hr>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="show_info/history.html"><img class="info_buttons" src="images/show_info/history.png" alt="history"/></a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
                             <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
                         </div>
                     </div>
