--- a/index.html
+++ b/index.html
@@ -33,46 +33,46 @@
                 </div><!--End Navbar Header-->
                 <div class=' collapse navbar-collapse' id='navbar-collapse'>
                     <ul class='nav navbar-nav'>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="show_info.html">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
                                         <li><a href="show_info/history.html">History</a></li>
-                                        <li><a href="#">Episode Transtripts</a></li>
-                                        <li><a href="#">Cast and Crew</a></li>
-                                        <li><a href="#">Canceled Episodes</a></li>
-                                        <li><a href="#">Easter Eggs/Cameos</a></li>
+                                        <li><a href="show_info/episode_transcripts.html">Episode Transtripts</a></li>
+                                        <li><a href="show_info/cast_and_crew.html">Cast and Crew</a></li>
+                                        <li><a href="show_info/canceled_episodes.html">Canceled Episodes</a></li>
+                                        <li><a href="show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#gallery">Lore</a>
+                        <li><a href="lore.html">Lore</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="#">Creature Biology</a></li>
-                                        <li><a href="#">Earth Locations</a></li>
-                                        <li><a href="#">Character Bios</a></li>
-                                        <li><a href="#">Planet Guide</a></li>
-                                        <li><a href="#">Irken Guide</a></li>
+                                        <li><a href="lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="lore/earth_locations.html">Earth Locations</a></li>
+                                        <li><a href="lore/character_bios.html">Character Bios</a></li>
+                                        <li><a href="lore/planet_guide.html">Planet Guide</a></li>
+                                        <li><a href="lore/irken_guide.html">Irken Guide</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#features">Zim Resources</a>
+                        <li><a href="resources.html">Zim Resources</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="#">Other Fan Sites</a></li>
-                                        <li><a href="#">Forums</a></li>
-                                        <li><a href="#">Social Media</a></li>
-                                        <li><a href="#">Other</a></li>
+                                        <li><a href="resources/other_fan_sites.html">Other Fan Sites</a></li>
+                                        <li><a href="resources/forums.html">Forums</a></li>
+                                        <li><a href="resources/social_media.html">Social Media</a></li>
+                                        <li><a href="resources/other_resources.html">Other</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#faq">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
