--- a/resources.html
+++ b/resources.html
@@ -82,26 +82,15 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Contact Information</h2>
+                        <h2>Zim Resources</h2>
                         <hr>
-                        <h3>Matt <small>Admin</small></h3>
-                        <p>
-                            <strong>Email:</strong> <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>
-                        </p>
-                        <p>
-                            <strong>Skype:</strong> matthew_c_lee
-                        </p>
-                        <p>
-                            <strong>Facebook:</strong> <a href="https://www.facebook.com/mattboy115">https://www.facebook.com/mattboy115</a>
-                        </p>
-                        <hr>
-                        <h3>Nicolas <small>Admin</small></h3>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
                 <div class="col-lg-4 col-md-4">
                     <aside class="side_bar">
-                        <section id="paypal">
+                        <div class="row">
+                        <section class='col-lg-12 col-sm-6' id="paypal">
                             <h2>Donate or Suffer<span>!</span></h2>
                             <p>Hey! Here's another way you can help out this site and keep it afloat! Donate whatever you can. The Irken Empire will thank you.</p>
                             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -112,26 +101,26 @@
                             </form>
                             <img id="minimoose" width="270" src="images/donations.png">
                         </section>
+                    </div>
                     </aside>
                 </div><!--End Side Bar-->
             </div><!--End Row-->
-            <div class="section container"> <!--Other Links Section-->
+            <div class="other_areas section container"> <!--Other Links Section-->
                 <h2>Other Special Areas</h2>
-                <div class="other_areas col-lg-4">
+                <hr>
+                <div class="col-lg-4">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
                         <li><a href="#">The Resisty Database</a></li>
-                        <li><a href="#">Skool Seating Charts</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <ul>
                         <li><a href="#">Screenshot Galleries</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4">
-                    <ul>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
@@ -139,7 +128,7 @@
                 </div>
                 <div class="col-lg-4">
                     <ul>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">Skool Seating Charts</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
@@ -147,10 +136,9 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-            </div>
+                </div>
         </div>
-
-        <footer>&copy Invader Zim is property of Nickelodeon. Site created by Matt Lee and co-created by Nicolas Noriega a.k.a. ThatMoose. </footer>
+        <footer>&copy Invader Zim is property of Nickelodeon. Site created by Matt Lee and co-created by Nicolas Noriega (ThatMoose). </footer>
     </div>
 </body>
 </html>
