--- a/show_info/history.html
+++ b/show_info/history.html
@@ -73,7 +73,7 @@
                             </div>
                         </li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div><!--End Container-->
@@ -82,7 +82,8 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-
+                        <h2>History</h2>
+                        <hr>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
