--- a/show_info/history.html
+++ b/show_info/history.html
@@ -39,7 +39,7 @@
                                 <div class="nav-sub">
                                     <ul>
                                         <li><a href="../show_info/history.html">History</a></li>
-                                        <li><a href="#">Episode Transtripts</a></li>
+                                        <li><a href="#">Episode Transcripts</a></li>
                                         <li><a href="#">Cast and Crew</a></li>
                                         <li><a href="#">Canceled Episodes</a></li>
                                         <li><a href="#">Easter Eggs/Cameos</a></li>
@@ -84,6 +84,17 @@
                     <div class="section">
                         <h2>History</h2>
                         <hr>
+                        <h3>Beginnings</h3>
+                        <p>
+                            Invader Zim began when
+                        </p>
+                        <h3>The End</h3>
+                        <p>
+                            As great as the show was, with as expensive as the show was to produce and air, it was not brining in the ratings it needed to continue on. To this day neither Johnen or Nickelodeon plan to start work on the show again, despite years of urging from fans all around.
+                        </p>
+                        <p>
+                            Many attempts have been made to bring Zim back. From petitions to fans actually going as far as trying to produced the unfinished episodes themselves using leaked voice recordings.
+                        </p>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
