--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,7 @@
                                 <div class="nav-sub">
                                     <ul>
                                         <li><a href="show_info/history.html">History</a></li>
-                                        <li><a href="show_info/episode_transcripts.html">Episode Transtripts</a></li>
+                                        <li><a href="show_info/episode_transcripts.html">Episode Transcripts</a></li>
                                         <li><a href="show_info/cast_and_crew.html">Cast and Crew</a></li>
                                         <li><a href="show_info/canceled_episodes.html">Canceled Episodes</a></li>
                                         <li><a href="show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
