Added structure to Show Info sub pages

--- a/show_info/history.html
+++ b/show_info/history.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
-    <title>The Scary Monkey Show Invader Zim Information Site</title>
+    <title>History - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
@@ -47,32 +47,32 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#gallery">Lore</a>
+                        <li><a href="../lore.html">Lore</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="#">Creature Biology</a></li>
-                                        <li><a href="#">Earth Locations</a></li>
-                                        <li><a href="#">Character Bios</a></li>
-                                        <li><a href="#">Planet Guide</a></li>
-                                        <li><a href="#">Irken Guide</a></li>
+                                        <li><a href="../lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="../lore/earth_locations.html">Earth Locations</a></li>
+                                        <li><a href="../lore/character_bios.html">Character Bios</a></li>
+                                        <li><a href="../lore/planet_guide.html">Planet Guide</a></li>
+                                        <li><a href="../lore/irken_guide.html">Irken Guide</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#features">Zim Resources</a>
+                        <li><a href="../resources.html">Zim Resources</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="#">Other Fan Sites</a></li>
-                                        <li><a href="#">Forums</a></li>
-                                        <li><a href="#">Social Media</a></li>
-                                        <li><a href="#">Other</a></li>
+                                        <li><a href="../resources/other_fan_sites.html">Other Fan Sites</a></li>
+                                        <li><a href="../resources/forums.html">Forums</a></li>
+                                        <li><a href="../resources/social_media.html">Social Media</a></li>
+                                        <li><a href="../resources/other_resources.html">Other</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#faq">FAQ</a></li>
+                        <li><a href="../faq.html">FAQ</a></li>
                         <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -82,9 +82,9 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>History</h2>
+                        <h2>History <small>Coming Soon!</small></h2>
                         <hr>
-                        <h3>Beginnings</h3>
+                        <!--<h3>Beginnings</h3>
                         <p>
                             Invader Zim began when
                         </p>
@@ -94,7 +94,7 @@
                         </p>
                         <p>
                             Many attempts have been made to bring Zim back. From petitions to fans actually going as far as trying to produced the unfinished episodes themselves using leaked voice recordings.
-                        </p>
+                        </p>-->
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
