--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
-    <title>Episode Guide - The Scary Monkey Show</title>
+    <title>Canceled Episodes - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
