Show Info page work. Also work begins on Canceled Episodes page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="other_areas section container"> <!--Other Links Section-->
                 <h2>Other Special Areas</h2>
                 <hr>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
                         <li><a href="#">The Resisty Database</a></li>
@@ -154,7 +154,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <ul>
                         <li><a href="#">Screenshot Galleries</a></li>
                         <li><a href="#"></a></li>
@@ -164,7 +164,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <ul>
                         <li><a href="#">Skool Seating Charts</a></li>
                         <li><a href="#"></a></li>
