--- a/resources/other_fan_sites.html
+++ b/resources/other_fan_sites.html
@@ -84,6 +84,9 @@
                     <div class="section">
                         <h2>Other Fan Sites <small>Coming Soon!</small></h2>
                         <hr>
+                        <section>
+                            
+                        </section>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
