--- a/show_info.html
+++ b/show_info.html
@@ -88,16 +88,16 @@
                             <a href="show_info/history.html"><img class="info_buttons" src="images/show_info/history.png" alt="history"/></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                            <a href="show_info/episode_guide.html"><img class="info_buttons" src="images/show_info/episode_guide.png" alt="episode guide" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                            <a href="show_info/cast_and_crew.html"><img class="info_buttons" src="images/show_info/cast_and_crew.png" alt="cast and crew" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                            <a href="show_info/canceled_episodes.html"><img class="info_buttons" src="images/show_info/canceled_episodes.png" alt="" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="show_info/episode_transcripts.html"><img class="info_buttons" src="images/show_info/episode_transcripts.png" alt="" /></a>
+                            <a href="show_info/easter_eggs.html"><img class="info_buttons" src="images/show_info/easter_eggs.png" alt="" /></a>
                         </div>
                     </div>
                 </div><!--End Content-->
