--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -84,6 +84,11 @@
                     <div class="section">
                         <h2>Canceled Episodes <small>Coming Soon!</small></h2>
                         <hr>
+                        <p>
+                            Of the 40 contracted episodes only 27 episodes were actually completed. Here are the episodes that never got to see the light of day.
+                        </p>
+
+                        <a href="../show_info/canceled_episodes/the_return_of_keef.html">The Return of Keef</a>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
