Episodes Added to Cancelled Episodes

--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -85,10 +85,36 @@
                         <h2>Canceled Episodes <small>Coming Soon!</small></h2>
                         <hr>
                         <p>
-                            Of the 40 contracted episodes only 27 episodes were actually completed. Here are the episodes that never got to see the light of day.
+                            Of the 40 contracted episodes only 27 episodes were actually completed. Here is a list of the remaining episodes we never got to see. Some of them already had the voice recording done which were released on the extra DVD in the Zim House DVD box set. I will try to have those available for download on this page. If I cannot, I will direct you to where you CAN download them.
                         </p>
-
-                        <a href="../show_info/canceled_episodes/the_return_of_keef.html">The Return of Keef</a>
+                        <div class="item">
+                            <h3>Roboparents Gone Wild <small>#27a</small></h3>
+                            <p>
+                                A power surge causes Zim's roboparents to disown him, throw him out of the house and adopt a half monkey, half badger hybrid that trashes his base. With the help of a filthy, weenie loving hobo, Zim has a plan to get his base back.
+                            </p>
+                            <a href="../show_info/canceled_episodes/roboparents_gone_wild.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Simon Says Doom <small>#27b</small></h3>
+                            <p>
+                                Zim uses the power of Simon Says to get orphans to take over the world for him. It's up to Dib to stop them. And keep the baby changing machine from having a core meltdown.
+                            </p>
+                            <a href="../show_info/canceled_episodes/simon_says_doom.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Invader Poonchy <small>#28a</small></h3>
+                            <p>
+                                Zim tries to convince Dib that their classmate, Poonchy is an Irken invader to distract Dib from his latest evil plan.
+                            </p>
+                            <a href="../show_info/canceled_episodes/invader_poonchy.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>The Return of Keef <small>#31a</small></h3>
+                            <p>
+                                Keef returns and tries to get Zim and Dib to be bestest friends. Zim and Dib have to work together to get rid of him for good.
+                            </p>
+                            <a href="../show_info/canceled_episodes/the_return_of_keef.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                        </div>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
@@ -115,7 +141,7 @@
                                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                                 </form>
-                                <img id="minimoose" width="270" src="images/donations.png">
+                                <img id="minimoose" width="270" src="../images/donations.png">
                             </section>
                         </div>
                     </aside>
